fix: update header background color for improved visibility

--- a/scss/components-styles/Header.scss
+++ b/scss/components-styles/Header.scss
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 2rem 3rem;
     color: black;
-    background-color: rgba(255, 255, 255, 0.653);
+    background-color: rgba(255, 255, 255, 0.758);
     box-shadow: -2px 2px 4px rgb(76, 76, 76);
     gap: 2rem;
     flex-wrap: wrap;
